# metta-wam

./: .dockerignore  .gitattributes  .gitignore  Compiler-project.vpj  Contrbuting.md  Dockerfile  Home.md  INSTALL.BAT  INSTALL.sh  MeTTa  MettaLog_metta_interp.pl.md  README.md  Strange-Prolog-Coder-Hacks.md  Test-files.vpj  compiler-project.vpj  hyperon-experimental.vpj  hyperon-wam.vpj  hyperon-wam.vpw  mettalog  mettalog.cmd  mettalog.html  mettalog.metta.tmp  pack.pl  reports  requirements.txt  setup.py  setup.soon  tests
.Attic/: .gitignore  mettalog.py  version-config
ci/: index.html
docs/: INFERENCE.md  MAKING_EXECUTABLES.md  OVERVIEW.md  chatgpt_knowledge_doc.txt
notebooks/: Addendum.ipynb  FlySpace.ipynb  MeTTa_Lang.ipynb  Quick_Introduction_to_MeTTa.ipynb  RM_Transformation.ipynb  Reference_Guide.ipynb  Tensorflow.ipynb  Thinking_Recursively_in_MeTTa.ipynb  metta_ex01.ipynb  notebook-obonet.ipynb  notebook-pyswip-tests.ipynb
prolog/: metta_lsp.pl  metta_rt.pl  mettalog.pl
python/: README.md  demo_mettalog.py  hyperlog.py  hyperlog_driver.pl  hyperonpy.cpp  hyperonpy.py  hyperonpypy.py  install_mettalog_python_libs.sh  metta_jupyter_kernel.py  mettalogpy.py  pyproject.toml  setup.py  test_mettalog.py
python/hyperon/: _version.py
python/hyperon-ref/exts/snet_io/: snet_gate.py
python/hyperon/exts/snet_io/: snet_gate.py
python/hyperon_ref/: _version.py
python/hyperon_ref/exts/agents/: agent_base.py
python/hyperon_ref/exts/snet_io/: snet_gate.py
python/integration/: test_torch.py
python/mettalog/: __init__.py  __main__.py  core.py  ff_tests.py  import_hook.py  mettalog_small.py  panda_util.py  repl_loop.py  runtime.py  rust_iface.py  vspace.py
python/sandbox/bhv_binding/: 01_example_majority.metta.answers  02_example_perm.metta.answers  03_example_dict.metta.answers
python/sandbox/das_gate/: test_das.metta.answers
python/sandbox/neurospace/: test_assist.metta.answers  test_nspace.metta.answers
python/sandbox/numpy/: nm_test.metta  nm_test.metta.answers
python/sandbox/pytorch/: tm_test.metta.answers
python/sandbox/repl/: metta_repl.py
python/sandbox/resolve/: r.metta.answers
python/sandbox/sql_space/: sql_space_test.metta  sql_space_test.metta.answers
python/tests/: test_grounded_type.py  test_load.metta.answers  test_stdlib.py
python/tests/scripts/: a2_opencoggy.metta.answers  b1_equal_chain.metta.answers  b2_backchain.metta.answers  b3_direct.metta.answers  b4_nondeterm.metta.answers  b5_types_prelim.metta  b5_types_prelim.metta.answers  c1_grounded_basic.metta  c1_grounded_basic.metta.answers  c3_pln_stv.metta  c3_pln_stv.metta.answers  d1_gadt.metta.answers  d2_higherfunc.metta.answers  d3_deptypes.metta.answers  d4_type_prop.metta.answers  d5_auto_types.metta  d5_auto_types.metta.answers  e1_kb_write.metta.answers  e2_states.metta  e2_states.metta.answers  e3_match_states.metta.answers  f1_imports.metta  f1_imports.metta.answers  f1_moduleA.metta  f1_moduleA.metta.answers
reports/: .gitignore  NewResults.md  PASS_FAIL.md  SHARED.UNITS.PREV.md  TEST_LINKS.md  prolog_codes_analyses.htm
scripts/: 1-VSpaceTest.metta  2-VSpaceTest.metta  3-Learn-Rules.metta  4-VSpaceTest.metta  5-Learn-Flybase.metta  6-Learn-Flybase-Full.metta  7-FlybaseResults.metta  8-FlybaseQuestions.metta  Defragmenter.py  Rebuild-hyperon.cmd  add_lines.sh  chado_to_tsv.sh  checkout_commits.sh  ci_workflow.sh  cmd_as_test.sh  colorize_output.sh  ensure_venv  (+35 more)
(+61945 files in other folders)
