[build-system]
# setuptools >68.0.0 is incompatible with macos-13
# setuptools_scm >7.1.0 is incompatible with Python 3.7
# Specify only what's necessary for the build process
# requires = ["setuptools==68.0.0", "conan==2.5.0", "cmake==3.24", "setuptools_scm[toml]==7.1.0"]
requires = ["setuptools==68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mettalog"
description = "Hyperon API in Python"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["metta", "mettalog", "hyperon", "opencog"]
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
]

dynamic = [
    "version",
]

[project.scripts]
mettalog-py = "hyperon.metta:main"
mettalog-repl = "mettalog_sandbox.repl.metta_repl:main"

[project.optional-dependencies]
dev = [
    "build==0.10.0",
    "pytest==7.3.2",
]

[tool.setuptools]
packages = ["hyperon", "mettalog", "mettalog_sandbox"]
package-dir = { "hyperon" = "hyperon", "mettalog" = "../src/mettalog", "mettalog_sandbox" = "sandbox"  }
# Specify hyperonpy.py as a py_modules entry
#py-modules = ["hyperonpy","mettalogpy"]
py-modules = ["mettalogpy"]

[tool.cibuildwheel]
#before-all = "sh -c ./python/install-hyperonc.sh"
skip = "*musllinux*"
test-requires = ["pytest==7.3.2"]
test-command = "pytest {project}/python/tests"

