[build-system]
# setuptools >68.0.0 is incompatible with macos-13
# setuptools_scm >7.1.0 is incompatible with Python 3.7
# Specify only what's necessary for the build process
# requires = ["setuptools==68.0.0", "conan==2.5.0", "cmake==3.24", "setuptools_scm[toml]==7.1.0"]
requires = ["setuptools==68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mettalog"
description = "Hyperon MeTTaLog API in Python"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["metta", "mettalog", "hyperon", "opencog"]
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
]

dynamic = [
    "version",
]

[project.scripts]
#mettalog-py = "hyperon.metta:main"
mettalog-repl = "mettalog.sandbox.repl.metta_repl:main"

[project.optional-dependencies]
dev = [
    "build==0.10.0",
    "pytest==7.3.2",
    "janus_swi"
]


[tool.setuptools]
packages = ["mettalog", "hyperon_ref", "mettalog.sandbox", "mettalog.libraries", "mettalog.py2metta", "mork"]
package-dir = { "mettalog"="mettalog", "mettalog.sandbox"="sandbox", "mettalog.libraries" = "../libraries", "mettalog.py2metta" = "../libraries/py2metta", "hyperon_ref" = "hyperon_ref", "mork" = "../libraries/mork-sys/MORK/python" }



# Specify hyperonpy.py as a py_modules entry
#py-modules = ["hyperonpy","mettalogpy"]
#  ln -s ../libraries/metta-morph-mlog/exted/mettamorph.py mettamorph.py
py-modules = ["mettalogpy", "hyperlog", "mettamorph"]

[tool.cibuildwheel]
#before-all = "sh -c ./python/install-hyperonc.sh"
skip = "*musllinux*"
test-requires = ["pytest==7.3.2"]
test-command = "pytest {project}/python/tests"

